SSCSFT-88 Add other part details to body of the notice